syntax = "proto3";

package position;
option csharp_namespace = "BookingCare.Services.Doctor.Protos";

import "google/protobuf/timestamp.proto";

service PositionService {
  rpc CreatePosition(CreatePositionRequest) returns (CreatePositionResponse);
  rpc GetPositionById(GetPositionByIdRequest) returns (GetPositionResponse);
  rpc GetPositions(GetPositionsRequest) returns (GetPositionsResponse);
}

message CreatePositionRequest {
  string name = 1;
}

message CreatePositionResponse {
  bool success = 1;
  string error_message = 2;
  PositionInfo position = 3;
}

message GetPositionByIdRequest { string id = 1; }

message GetPositionResponse {
  bool success = 1;
  string error_message = 2;
  PositionInfo position = 3;
}

message GetPositionsRequest {
  int32 page_number = 1;
  int32 page_size = 2; // 0 = return all
  string search_term = 3;
}

message GetPositionsResponse {
  bool success = 1;
  string error_message = 2;
  repeated PositionInfo positions = 3;
  int32 total_count = 4;
  int32 page_number = 5;
  int32 page_size = 6;
  int32 total_pages = 7;
}

message PositionInfo {
  string id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}


