@startuml Position-Class-Diagram

title BookingCare Position Service - Class Diagram

hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 50
skinparam classBackgroundColor White
skinparam classBorderColor Black
skinparam wrapWidth 220
skinparam maxMessageSize 220

' ========== PRESENTATION LAYER ==========
class PositionsController {
    - _positionService: IPositionService
    + GetPosition(id): Task<IActionResult>
    + CreatePosition(request): Task<IActionResult>
    + UpdatePosition(id, request): Task<IActionResult>
    + DeletePosition(id): Task<IActionResult>
    + GetPositions(query): Task<IActionResult>
    + TogglePositionStatus(id): Task<IActionResult>
}

' ========== SERVICE LAYER ==========
interface IPositionService {
    + CreatePositionAsync(request): Task<PositionResponse>
    + GetPositionByIdAsync(id): Task<PositionResponse?>
    + UpdatePositionAsync(request): Task<PositionResponse>
    + DeletePositionAsync(id): Task<bool>
    + TogglePositionStatusAsync(id): Task<bool>
    + GetPositionsAsync(query): Task<PositionListResponse>
}

class PositionService {
    - _repository: IPositionRepository
    - _mapper: IMapper
    - _logger: ILogger
    + CreatePositionAsync(request): Task<PositionResponse>
    + GetPositionByIdAsync(id): Task<PositionResponse?>
    + UpdatePositionAsync(request): Task<PositionResponse>
    + DeletePositionAsync(id): Task<bool>
    + GetPositionsAsync(query): Task<PositionListResponse>
}

' ========== REPOSITORY LAYER ==========
interface IPositionRepository {
    + GetPositionByIdAsync(id): Task<PositionEntity?>
    + CreatePositionAsync(position): Task<PositionEntity>
    + UpdatePositionAsync(position): Task<PositionEntity>
    + DeletePositionAsync(id): Task<bool>
    + GetPositionsAsync(query): Task<(List<PositionEntity>, int)>
}

class PositionRepository {
    - _context: DoctorDbContext
    + GetPositionByIdAsync(id): Task<PositionEntity?>
    + CreatePositionAsync(position): Task<PositionEntity>
    + UpdatePositionAsync(position): Task<PositionEntity>
    + DeletePositionAsync(id): Task<bool>
}

' ========== DATA LAYER ==========
class DoctorDbContext {
    + Positions: DbSet<PositionEntity>
}

' ========== ENTITIES ==========
class PositionEntity {
    + Id: Guid
    + Name: string
    + Status: Status
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

' ========== DTOs ==========
class CreatePositionRequest {
    + Name: string
    + Status: Status
}

class PositionQueryRequest {
    + SearchTerm: string?
    + Status: string?
    + PageNumber: int
    + PageSize: int
}

class PositionResponse {
    + Id: Guid
    + Name: string
    + Status: Status
}

class PositionListResponse {
    + Positions: List<PositionResponse>
    + TotalCount: int
    + PageNumber: int
    + PageSize: int
    + TotalPages: int
}

' ========== LAYOUT HINTS ==========
PositionsController -[hidden]down- IPositionService
IPositionService -[hidden]down- IPositionRepository
IPositionRepository -[hidden]down- DoctorDbContext

' ========== RELATIONSHIPS ==========

' Controller Layer
PositionsController *-- IPositionService

' Service Layer
PositionService ..|> IPositionService
PositionService *-- IPositionRepository
PositionService o-- IMapper

' Repository Layer
PositionRepository ..|> IPositionRepository
PositionRepository *-- DoctorDbContext

' Service Uses DTOs
IPositionService ..> CreatePositionRequest
IPositionService ..> PositionQueryRequest
IPositionService ..> PositionResponse

' Repository Uses Entities
IPositionRepository ..> PositionEntity

@enduml